	------

	o apropos's --and option now works again; it was broken by the
	  optimisations in 2.6.2.

	o Restore compatibility with Automake 1.10.

	o Improve support for translation of common elements of help
	  messages.

	o Don't issue error messages when the database refers to a page that
	  no longer exists.

	o Pass macro and hyphenation language tags to groff again (broken in
	  2.6.5).

man-db 2.6.5 (27 June 2013)
===========================

Major changes since man-db 2.6.4:

	Fixes:
	------

	o man's --warnings option works again on systems with versions of
	  groff that support it (broken in 2.6.4).

	o man automatically falls back to C.UTF-8 and then en_GB.UTF-8 if
	  trying to find a UTF-8 locale on a system without
	  /usr/share/i18n/SUPPORTED.

man-db 2.6.4 (23 June 2013)
===========================

Major changes since man-db 2.6.3:

	Fixes:
	------

	o man(1) and catman(8) now document the default section list set at
	  configure time.

	o Build fixes for Automake 1.13.

	o man-db 2.6.0 arranged to search the full manpath when expanding
	  .so directives in manual pages (so that ".so name.1" works as well
	  as ".so man1/name.1"), but this incorrectly did not take effect
	  for manual pages that consist only of a .so directive.  This is
	  now fixed.

	Improvements:
	-------------

	o The MANLESS environment variable is now treated as if it were a
	  default value for the -r option to man: occurrences of the text
	  "$MAN_PN" are expanded, and explicitly using the -r option
	  overrides the default.

	o The (unfortunately still hardcoded) maximum length for paths to
	  manual page hierarchies in the configuration file is now 511
	  characters rather than 49.

	o MANPATH entries now undergo glob(7)-style wildcard expansion,
	  allowing entries such as "/opt/*/man".

man-db 2.6.3 (17 September 2012)
================================

Major changes since man-db 2.6.2:

	Fixes:
	------

	o Build fixes for glibc 2.16 and Automake 1.12.
