@@ -166,6 +166,10 @@
 #  define PIC 		"@pic@"
 #endif
 
+#ifndef OVERRIDE_DIR
+#  define OVERRIDE_DIR	"@override_dir@"
+#endif
+
 /*------------------------------------------------------------------*/
 /* The following definitions are best left alone by the uninitiated */
 /*------------------------------------------------------------------*/
