@@ -23,6 +23,12 @@ Major changes since man-db 2.6.5:
 	o Pass macro and hyphenation language tags to groff again (broken in
 	  2.6.5).
 
+	Improvements:
+	-------------
+
+	o ./configure --with-override-dir=OVERRIDE arranges to look for
+	  manual pages in DIR/OVERRIDE before each path element DIR.
+
 man-db 2.6.5 (27 June 2013)
 ===========================
 
